[metadata]
name = zxybackupcloser
version = 1.0.1
author = Patineboot
author_email = patineboot@anau.net
license = BSD 2-Clause License
description = The ZxyBackupCloser software is to back up some ZFS pools to another ZFS pool or dataset.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/patineboot/zxybackupcloser
project_urls =
    Bug Tracker = https://github.com/patineboot/zxybackupcloser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    zxybackupcloser = zxybackupcloser.backupcloser:launch
